--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     </head>
 
     <body>
-        <webview id="webview" preload="./webview.js">
+        <webview id="webview" src="./webview.html" preload="./webview.js">
         </webview>
         <div class="container">
             <div class="row col-h-2">
@@ -37,7 +37,7 @@
             </div>
             <div class="row col-h-6">
                     <div class="col-xs-2 active" id="back"><i class="fa fa-step-backward" aria-hidden="true"></i></div>
-                    <div class="col-xs-8" id="play"><!--<i class="fa fa-play" aria-hidden="true"></i>--></div>
+                    <div class="col-xs-8" id="play"> <!--<i class="fa fa-play" aria-hidden="true"></i>--></div>
                     <div class="col-xs-2 active" id="next"><i class="fa fa-step-forward" aria-hidden="true"></i></div>
             </div>
             <div class="row col-h-2">
@@ -47,33 +47,8 @@
             </div>
             
         </div>
-      <!--
-    <h1>Hello World!</h1>
-    We are using node <script>document.write(process.versions.node)</script>,
-    Chrome <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
-
-    <div id="root-dom"></div>
-    <div id="root"></div>
-      -->
     <script>
-//      require("babel-register")({plugins: "transform-react-jsx"});
-//      const React = require("react");
-//      const ReactDOM = require("react-dom");
-//      const MyApp = require("./may-app").default;
-//      const rootDOM = document.getElementById("root-dom");
-//      ReactDOM.render(React.createElement(MyApp), rootDOM);
-//     require("./index.js")
         require('./renderer.js');
     </script>
-
-    <!--
-    <script>
-        window.onload = function(){
-            require("babel-register")({plugins: "transform-react-jsx"});
-            require("./index.js")
-        }
-      </script>
-    -->
   </body>
 </html>
